v2.3.1 bug fixes and comments default options
TODO: Needs more organizing